Fix release.sh