@@ -1,5 +1,7 @@
 #!/bin/bash
 
+export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
+
 set -e
 
 if (( $# == 0 || $# > 2 ))
